--- a/index.html
+++ b/index.html
@@ -35,28 +35,25 @@
 
 <p><img src="me.jpg" style="border-radius:50%;max-width:25%;min-width:40px;float:right;margin:25px" alt="Github repo" /></p>
 <h1 id="yutong-wang">Yutong Wang</h1>
-<h4 id="eric-and-wendy-schmidt-ai-in-science-postdoctoral-fellow-br-university-of-michigan-br-a-hrefmailto-yutongwumichedu--yutongwumichedu-a">Eric and Wendy Schmidt AI in Science Postdoctoral Fellow </br> University of Michigan </br> <A HREF="mailto: yutongw@umich.edu" > <a href="mailto:yutongw@umich.edu">yutongw@umich.edu</a> </A></h4>
+<h4 id="assistant-professor-br-computer-science-department-br-illinois-institute-of-technology-br-a-hrefmailto-ywang562iitedu--ywang562iitedu-a">Assistant Professor </br> Computer Science Department </br> Illinois Institute of Technology </br> <A HREF="mailto: ywang562@iit.edu" > <a href="mailto:ywang562@iit.edu">ywang562@iit.edu</a> </A></h4>
 <!-- <span><img src="email.png" style="width:120px" alt="email" /></span>
 -->
-<p>I will be joining
-Illinois Institute of Technology as an assistant professor in the  <a href="https://www.iit.edu/computer-science">Department of Computer Science</a> starting Fall 2024.</p>
-<hr>
-<p>I am a Postdoctoral Research Fellow in the Department of <a href="https://ece.engin.umich.edu/">Electrical and Computer Engineering (ECE)</a> at the University of Michigan, Ann Arbor.
-My advisors are Professors
+<p>I have joined as an assistant professor in the  <a href="https://www.iit.edu/computer-science">Computer Science Department</a> since Fall 2024.</p>
+<p>Previously,
+I was a Postdoctoral Research Fellow in the Department of <a href="https://ece.engin.umich.edu/">Electrical and Computer Engineering (ECE)</a> at the University of Michigan, Ann Arbor supported by
+the <a href="https://www.schmidtfutures.com/our-work/schmidt-ai-in-science-postdocs/">Eric and Wendy Schmidt AI Fellowship</a>.
+I was hosted by
 <a href="https://qingqu.engin.umich.edu/">Qing Qu</a>,
 and
 <a href="https://weihu.me/">Wei Hu</a>.
-My research interests are in theoretical machine learning.
-I also work on applications of machine learning to reconstructive spectroscopy systems and semiconductor devices, in collaboration with the research group of Professor <a href="https://web.eecs.umich.edu/~peicheng/">Pei-Cheng Ku</a>.
-I am grateful to be supported by the <a href="https://www.schmidtfutures.com/our-work/schmidt-ai-in-science-postdocs/">Eric and Wendy Schmidt AI Fellowship</a>.</p>
-<p>Before my postdoc, I completed my PhD in ECE advised by Professor
+Before my postdoc, I completed my PhD in ECE advised by
 <a href="http://web.eecs.umich.edu/~cscott/">Clay Scott</a>, also at the University of Michigan.
 Prior to my PhD, I obtained my masters in mathematics at <a href="https://www.math.ucdavis.edu/">UC Davis</a>.</p>
 <hr>
 <h2 id="research-interests">Research interests</h2>
 <ul>
-<li>Theory of overparametrized learning &ndash; models that interpolate perfectly or nearly,</li>
 <li>Uniquely multiclass phenomena &ndash; multiclass classification and multilabel learning,</li>
+<li>Theory of overparametrized learning &ndash; models that interpolate perfectly or nearly,</li>
 <li>AI &amp; ML for science:
 <ul>
 <li>Gene expression data harmonization,</li>
@@ -65,10 +62,14 @@ Prior to my PhD, I obtained my masters in mathematics at <a href="https://www.ma
 </ul>
 </li>
 </ul>
-<!--
----
-## Preprints
--->
+<hr>
+<h2 id="preprints">Preprints</h2>
+<ul>
+<li><strong>Sim2Real in Reconstructive Spectroscopy: Deep Learning with Augmented Device-Informed Data Simulation</strong> </br>
+Jiyi Chen*, Pengyu Li*, Yutong Wang, Pei-Cheng Ku, and Qing Qu</br>
+In Submission to <em>APL Machine Learning</em>.</br>
+[<a href="https://arxiv.org/abs/2403.12354">arXiv</a>]</li>
+</ul>
 <hr>
 <h2 id="publications">Publications</h2>
 <p>* denotes equal contribution. </br></p>
