--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 <h4 id="assistant-professor-br-computer-science-department-br-illinois-institute-of-technology-br-a-hrefmailto-ywang562iitedu--ywang562iitedu-a">Assistant Professor </br> Computer Science Department </br> Illinois Institute of Technology </br> <A HREF="mailto: ywang562@iit.edu" > <a href="mailto:ywang562@iit.edu">ywang562@iit.edu</a> </A></h4>
 <!-- <span><img src="email.png" style="width:120px" alt="email" /></span>
 -->
-<p>I have joined as an assistant professor in the  <a href="https://www.iit.edu/computer-science">Computer Science Department</a> since Fall 2024.</p>
+<p>I  joined  the  <a href="https://www.iit.edu/computer-science">Computer Science Department</a> at <a href="https://www.iit.edu/">Illinois Tech</a>
+as an assistant professor in
+Fall 2024.</p>
 <p>Previously,
-I was a Postdoctoral Research Fellow in the Department of <a href="https://ece.engin.umich.edu/">Electrical and Computer Engineering (ECE)</a> at the University of Michigan, Ann Arbor supported by
-the <a href="https://www.schmidtfutures.com/our-work/schmidt-ai-in-science-postdocs/">Eric and Wendy Schmidt AI Fellowship</a>.
+I was a Postdoctoral Research Fellow supported by
+the <a href="https://www.schmidtfutures.com/our-work/schmidt-ai-in-science-postdocs/">Eric and Wendy Schmidt AI Fellowship</a> in the Department of <a href="https://ece.engin.umich.edu/">Electrical and Computer Engineering (ECE)</a> at the University of Michigan, Ann Arbor.
 I was hosted by
 <a href="https://qingqu.engin.umich.edu/">Qing Qu</a>,
 and
