--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ and
 <a href="https://weihu.me/">Wei Hu</a>.
 Before my postdoc, I completed my PhD in ECE advised by
 <a href="http://web.eecs.umich.edu/~cscott/">Clay Scott</a>, also at the University of Michigan.
-Prior to my PhD, I obtained my masters in mathematics at <a href="https://www.math.ucdavis.edu/">UC Davis</a>.</p>
+Prior to that, I spent two years in the <a href="https://www.math.ucdavis.edu/">Mathematics Department of UC Davis</a> where I obtained my masters.</p>
 <hr>
 <h2 id="research-interests">Research interests</h2>
 <ul>
