--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@ Yutong Wang and Clayton Scott</br>
 <li>
 <p><strong>Neural Collapse in Multi-label Learning with Pick-all-label Loss</strong> </br>
 Pengyu Li*, Xiao Li*, Yutong Wang, and Qing Qu</br>
-Accepted to <em>International Conference on Machine Learning, 2024</em>.</br>
+<em>International Conference on Machine Learning, 2024</em>.</br>
+[<a href="https://openreview.net/forum?id=y8NevOhrnW">Paper</a>]
 [<a href="https://arxiv.org/abs/2310.15903">arXiv</a>]</p>
 </li>
 <li>
