new paper accepts

--- a/index.html
+++ b/index.html
@@ -64,18 +64,26 @@ Prior to that, I spent two years in the <a href="https://www.math.ucdavis.edu/">
 </ul>
 </li>
 </ul>
-<hr>
-<h2 id="preprints">Preprints</h2>
-<ul>
-<li><strong>Sim2Real in Reconstructive Spectroscopy: Deep Learning with Augmented Device-Informed Data Simulation</strong> </br>
-Jiyi Chen*, Pengyu Li*, Yutong Wang, Pei-Cheng Ku, and Qing Qu</br>
-In Submission to <em>APL Machine Learning</em>.</br>
-[<a href="https://arxiv.org/abs/2403.12354">arXiv</a>]</li>
-</ul>
+<!--
+---
+## Preprints
+-->
 <hr>
 <h2 id="publications">Publications</h2>
 <p>* denotes equal contribution. </br></p>
 <ul>
+<li>
+<p><strong>The Implicit Bias of Gradient Descent on Separable Multiclass Data</strong></br>
+Hrithik Ravi and Clayton Scott and Daniel Soudry and Yutong Wang</br>
+Accepted to <em>Neural Information Processing Systems, 2024</em>.</br></p>
+</li>
+<li>
+<p><strong>Sim2Real in Reconstructive Spectroscopy: Deep Learning with Augmented Device-Informed Data Simulation</strong> </br>
+Jiyi Chen*, Pengyu Li*, Yutong Wang, Pei-Cheng Ku, and Qing Qu</br>
+<em>APL Machine Learning</em>, vol. 2, no. 3, pp. 036106, 2024.</br>
+[<a href="https://pubs.aip.org/aip/aml/article/2/3/036106/3309142/Sim2Real-in-reconstructive-spectroscopy-Deep">Paper</a>]
+[<a href="https://arxiv.org/abs/2403.12354">arXiv</a>]</p>
+</li>
 <li>
 <p><strong>Unified Binary and Multiclass Margin-Based Classification</strong> </br>
 Yutong Wang and Clayton Scott</br>
