added the author listing

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Prior to that, I spent two years in the <a href="https://www.math.ucdavis.edu/">
 <ul>
 <li>
 <p><strong>The Implicit Bias of Gradient Descent on Separable Multiclass Data</strong></br>
-Hrithik Ravi and Clayton Scott and Daniel Soudry and Yutong Wang</br>
+Hrithik Ravi, Clayton Scott, Daniel Soudry, and Yutong Wang</br>
 Accepted to <em>Neural Information Processing Systems, 2024</em>.</br></p>
 </li>
 <li>
