--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 -->
 <p>I  joined  the  <a href="https://www.iit.edu/computer-science">Computer Science Department</a> at <a href="https://www.iit.edu/">Illinois Tech</a>
 as an assistant professor in
-Fall 2024.</p>
+Fall 2024. I am also a member of the <a href="https://www.ideal-institute.org/">IDEAL Institute</a>.</p>
 <p>Previously,
 I was a Postdoctoral Research Fellow supported by
 the <a href="https://www.schmidtfutures.com/our-work/schmidt-ai-in-science-postdocs/">Eric and Wendy Schmidt AI Fellowship</a> in the Department of <a href="https://ece.engin.umich.edu/">Electrical and Computer Engineering (ECE)</a> at the University of Michigan, Ann Arbor.
@@ -54,15 +54,9 @@ Prior to that, I spent two years in the <a href="https://www.math.ucdavis.edu/">
 <hr>
 <h2 id="research-interests">Research interests</h2>
 <ul>
-<li>Uniquely multiclass phenomena &ndash; multiclass classification and multilabel learning,</li>
-<li>Theory of overparametrized learning &ndash; models that interpolate perfectly or nearly,</li>
-<li>AI &amp; ML for science:
-<ul>
-<li>Gene expression data harmonization,</li>
-<li>Reconstructive spectroscopy for miniaturized spectrometer devices,</li>
-<li>Biodiversity monitoring for climate change mitigation.</li>
-</ul>
-</li>
+<li>Uniquely multiclass phenomena &mdash; challenges that occur exclusively in <em>multiclass</em> classification,</li>
+<li>Theory of overparametrized learning &mdash; models that interpolate perfectly or nearly,</li>
+<li>AI &amp; ML for science &mdash; biodiversity monitoring for climate change mitigation.</li>
 </ul>
 <!--
 ---
@@ -75,7 +69,8 @@ Prior to that, I spent two years in the <a href="https://www.math.ucdavis.edu/">
 <li>
 <p><strong>The Implicit Bias of Gradient Descent on Separable Multiclass Data</strong></br>
 Hrithik Ravi, Clayton Scott, Daniel Soudry, and Yutong Wang</br>
-Accepted to <em>Neural Information Processing Systems, 2024</em>.</br></p>
+Accepted to <em>Neural Information Processing Systems, 2024</em>.</br>
+[<a href="http://arxiv.org/abs/2411.01350">arXiv</a>]</p>
 </li>
 <li>
 <p><strong>Sim2Real in Reconstructive Spectroscopy: Deep Learning with Augmented Device-Informed Data Simulation</strong> </br>
