--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Pengyu Li*, Xiao Li*, Yutong Wang, and Qing Qu</br>
 <p><strong>Near-Interpolators: Rapid Norm Growth and the Trade-Off between Interpolation and Generalization</strong> </br>
 Yutong Wang, Rishi Sonthalia, Wei Hu </br>
 <em>Artificial Intelligence and Statistics, 2024</em>.</br>
-[<a href="https://proceedings.mlr.press/v238/wang24k.html">Paper</a>]
+[<a href="https://proceedings.mlr.press/v238/wang24l.html">Paper</a>]
 [<a href="https://arxiv.org/abs/2403.07264">arXiv</a>]</p>
 </li>
 <li>
