--- a/index.html
+++ b/index.html
@@ -35,29 +35,33 @@
 
 <p><img src="me.jpg" style="border-radius:50%;max-width:25%;min-width:40px;float:right;margin:25px" alt="Github repo" /></p>
 <h1 id="yutong-wang">Yutong Wang</h1>
-<h4 id="assistant-professor-br-computer-science-department-br-illinois-institute-of-technology-br-a-hrefmailto-ywang562iitedu--ywang562iitedu-a">Assistant Professor </br> Computer Science Department </br> Illinois Institute of Technology </br> <A HREF="mailto: ywang562@iit.edu" > <a href="mailto:ywang562@iit.edu">ywang562@iit.edu</a> </A></h4>
+<h4 id="assistant-professor-br-computer-science-department-br-illinois-institute-of-technology-br-a-hrefmailto-ywang562illinoistechedu--ywang562illinoistechedu-a">Assistant Professor </br> Computer Science Department </br> Illinois Institute of Technology </br> <A HREF="mailto: ywang562@illinoistech.edu" > <a href="mailto:ywang562@illinoistech.edu">ywang562@illinoistech.edu</a> </A></h4>
 <!-- <span><img src="email.png" style="width:120px" alt="email" /></span>
 -->
-<p>I  joined  the  <a href="https://www.iit.edu/computer-science">Computer Science Department</a> at <a href="https://www.iit.edu/">Illinois Tech</a>
-as an assistant professor in
-Fall 2024. I am also a member of the <a href="https://www.ideal-institute.org/">IDEAL Institute</a>.</p>
+<p>I  am an assistant professor in  the  <a href="https://www.iit.edu/computer-science">Computer Science Department</a> at <a href="https://www.iit.edu/">Illinois Tech</a>. I am also a member of the <a href="https://www.ideal-institute.org/">IDEAL Institute</a>.</p>
 <p>Previously,
 I was a Postdoctoral Research Fellow supported by
 the <a href="https://www.schmidtfutures.com/our-work/schmidt-ai-in-science-postdocs/">Eric and Wendy Schmidt AI Fellowship</a> in the Department of <a href="https://ece.engin.umich.edu/">Electrical and Computer Engineering (ECE)</a> at the University of Michigan, Ann Arbor.
-I was hosted by
-<a href="https://qingqu.engin.umich.edu/">Qing Qu</a>,
-and
-<a href="https://weihu.me/">Wei Hu</a>.
-Before my postdoc, I completed my PhD in ECE advised by
-<a href="http://web.eecs.umich.edu/~cscott/">Clay Scott</a>, also at the University of Michigan.
+Before my postdoc, I completed my PhD in ECE at the University of Michigan.
 Prior to that, I spent two years in the <a href="https://www.math.ucdavis.edu/">Mathematics Department of UC Davis</a> where I obtained my masters.</p>
 <hr>
 <h2 id="research-interests">Research interests</h2>
-<ul>
-<li>Uniquely multiclass phenomena &mdash; challenges that occur exclusively in <em>multiclass</em> classification,</li>
-<li>Theory of overparametrized learning &mdash; models that interpolate perfectly or nearly,</li>
-<li>AI &amp; ML for science &mdash; biodiversity monitoring for climate change mitigation.</li>
-</ul>
+<p>Uniquely multiclass phenomena • Theory of overparametrized learning  •  AI &amp; ML for science  •
+Uncertainty estimation  •
+Privacy-preserving machine learning.</p>
+<hr>
+<h2 id="group">Group</h2>
+<h3 id="phd-students">PhD students</h3>
+<div class ="labmemberscontainer">
+<div class ="labmemberphotosbox">
+<img src="lab-members-photos/amir.jpeg" />
+<p>Amirreza &ldquo;Amir&rdquo; Eshraghi</p>
+</div>
+<div class ="labmemberphotosbox">
+<img src="lab-members-photos/leela.jpeg"  />
+<p>Leelavathi &ldquo;Leela&rdquo; Raja</p>
+</div>
+</div>
 <!--
 ---
 ## Preprints
@@ -67,9 +71,16 @@ Prior to that, I spent two years in the <a href="https://www.math.ucdavis.edu/">
 <p>* denotes equal contribution. </br></p>
 <ul>
 <li>
+<p><strong>Brenier Isotonic Regression</strong></br>
+Han Bao, Amirreza Eshraghi, and Yutong Wang</br>
+Accepted to <em>Artificial Intelligence and Statistics, 2026</em>.</br>
+[<a href="https://yutongwang.me/">arXiv coming soon</a>]</p>
+</li>
+<li>
 <p><strong>The Implicit Bias of Gradient Descent on Separable Multiclass Data</strong></br>
 Hrithik Ravi, Clayton Scott, Daniel Soudry, and Yutong Wang</br>
-Accepted to <em>Neural Information Processing Systems, 2024</em>.</br>
+<em>Neural Information Processing Systems, 2024</em>.</br>
+[<a href="https://openreview.net/forum?id=JlWn80mTJi">OpenReview</a>]
 [<a href="http://arxiv.org/abs/2411.01350">arXiv</a>]</p>
 </li>
 <li>
