--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@ Privacy-preserving machine learning.</p>
 <h3 id="phd-students">PhD students</h3>
 <div class ="labmemberscontainer">
 <div class ="labmemberphotosbox">
-<img src="lab-members-photos/amir.jpeg" />
+<img src="lab-members-photos/placeholder.png"/>
+<p>Jiyi Chen</p>
+</div>
+<div class ="labmemberphotosbox">
+<img src="lab-members-photos/amir.jpeg"/>
 <p>Amirreza &ldquo;Amir&rdquo; Eshraghi</p>
 </div>
 <div class ="labmemberphotosbox">
@@ -62,6 +66,8 @@ Privacy-preserving machine learning.</p>
 <p>Leelavathi &ldquo;Leela&rdquo; Raja</p>
 </div>
 </div>
+<h3 id="master-students">Master students</h3>
+<h3 id="alumni">Alumni</h3>
 <!--
 ---
 ## Preprints
