--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <i class="fa-solid fa-graduation-cap"></i> 
       Google Scholar</a></li>
       
+      <li><a href="lab-photos">
+        <i class="fa-solid fa-photo-film"></i> 
+      Group Photos</a></li>
+      
     </ul>
     <hr/>
     </nav>
@@ -51,6 +55,7 @@ Uncertainty estimation  •
 Privacy-preserving machine learning.</p>
 <hr>
 <h2 id="group">Group</h2>
+<p>I&rsquo;m fortunate to work with the following group of talented students. See the <a href="lab-photos">group photos</a> page.</p>
 <h3 id="phd-students">PhD students</h3>
 <div class ="labmemberscontainer">
 <div class ="labmemberphotosbox">
@@ -67,7 +72,21 @@ Privacy-preserving machine learning.</p>
 </div>
 </div>
 <h3 id="master-students">Master students</h3>
+<ul>
+<li>Maria Banegas</li>
+<li>Sami Ouabrk</li>
+<li>César Agulló Quirós</li>
+<li>Sara Rodriguez</li>
+<li>Priyansh Salian</li>
+</ul>
 <h3 id="alumni">Alumni</h3>
+<p><em>&quot;-&gt; next position&quot;</em> (if known).</p>
+<ul>
+<li>Anwar Benhnini</li>
+<li>Pranav Madan <em>-&gt; Revature</em></li>
+<li>Vinay Prabhakar <em>-&gt; AMD</em></li>
+<li>Sukhmani &ldquo;Sukhi&rdquo; Sandhu</li>
+</ul>
 <!--
 ---
 ## Preprints
