--- a/lab-photos/index.html
+++ b/lab-photos/index.html
@@ -40,7 +40,9 @@
 </div>
 
 <main>
-<img src="/lab-group-photos/IMG_5129_Large.JPG" class="groupphoto"/>
+<p><img src="/lab-group-photos/IMG_5129_Large.jpeg" style="max-width:500px;" /></p>
+<p>Left-to-right: Anwar, Jiyi, Yutong, Vinay, Sukhi.</p>
+
 </main>
 
   <footer>
