--- a/lab-photos/index.html
+++ b/lab-photos/index.html
@@ -40,8 +40,8 @@
 </div>
 
 <main>
-<p><img src="/lab-group-photos/IMG_5129_Large.jpeg" style="max-width:500px;" /></p>
-<p>&lt;/ br&gt;</p>
+<img src="/lab-group-photos/IMG_5129_Large.jpeg" style="max-width:500px;" />
+</ br>
 <p>Left-to-right: Anwar, Jiyi, Yutong, Vinay, Sukhi.</p>
 
 </main>
